--- a/Form101.html
+++ b/Form101.html
@@ -383,4 +383,10 @@
       </fieldset>
     </form>
   </body>
+  <footer>
+    <p>index</p>
+    <ul>
+      <li><a href="/index.html">back to index</a></li>
+    </ul>
+  </footer>
 </html>
