--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index Filling out forms</title>
   </head>
-  <body></body>
+  <body>
+    <h1>טפסים יפים למינהם</h1>
+
+    <ul>
+      <li><a href="/Form101.html">טופס 101</a></li>
+    </ul>
+  </body>
 </html>
