--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index Filling out forms</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>טפסים יפים למינהם</h1>
 
     <ul>
-      <li><a href="/Form101.html">טופס 101</a></li>
+      <li id="a-101"><a href="/index.html">טופס 101</a></li>
     </ul>
   </body>
 </html>
