--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>טפסים יפים למינהם</h1>
 
     <ul>
-      <li id="a-101"><a href="/index.html">טופס 101</a></li>
+      <li id="a-101"><a href="./Form101.html">טופס 101</a></li>
     </ul>
   </body>
 </html>
