סיום טופס ראשון

--- a/index.html
+++ b/index.html
@@ -379,14 +379,40 @@
             name="permanentresidentsince"
             id="permanentresidentsince"
           />
+
+          אני ובני משפחתי מדרגה ראשונה, מתגוררים ביישוב
+          <input type="text" name="8.3.3" id="8.3.3" />
+          ואין לי "מרכז חיים" נוסף. מצורף אישור של הרשות ע"ג טופס 1312א
+        </label>
+        <hr />
+        <input type="checkbox" name="8.4.1" id="8.4.1" />
+        <label for="8.4.1"
+          >אני עולה חדש/ה מתאריך
+          <input type="date" name="8.4.2" id="8.4.2" /> לא היתה לי הכנסה בישראל
+          מתחיל שנת המס הנוכחית ועד תאריך
+          <input type="date" name="8.4.3" id="8.4.3" />
         </label>
       </fieldset>
+
+      <fieldset id="part-h" style="background-color: bisque ;font-weight: bold;">
+        <legend>י. הצהרה</legend>
+        <b></b>
+          אני מצהיר/ה כי הפרטים שמסרתי בטופס זה הינם מלאים ונכונים. ידוע לי
+          שהשמטה או מסירת פרטים לא נכונים הינה עבירה על פקודת מס הכנסה. אני
+          מתחייב/ת להודיע למעסיק על כל שינוי שיחול בפרטיי האישיים ובפרטים דלעיל
+          תוך שבוע ימים מתאריך השינוי.</b
+        >
+        <br>
+
+        <input type="date" name="time-signature" id="time-signature">
+        <label for="time-signature">תאריך</label>
+
+        <input type="text" name="signature" id="signature">
+        <label for="signature">חתימה</label>
+      </fieldset>
+
+      <input type="reset" value="התחל מחדש" class="sand">
+      <input type="submit" value="שלח טופס" class="sand">
     </form>
   </body>
-  <footer>
-    <p>index</p>
-    <ul>
-      <li><a href="/index.html">back to index</a></li>
-    </ul>
-  </footer>
 </html>
